fix(advanced-filters.css): have formset table stretch to container width

--- a/advanced_filters/static/advanced-filters/advanced-filters.css
+++ b/advanced_filters/static/advanced-filters/advanced-filters.css
@@ -1,3 +1,7 @@
+#form-group {
+	width: 100%;
+}
+
 .grp-object-tools li div {
 	display: block;
 	padding: 4px 15px;
